# tutor-report-system

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  mailmode.sh  start.ps1  stop.ps1
new_backend/: Dockerfile  pyproject.toml
new_backend/app/: main.py
new_backend/app/api/: admin.py  assignments.py  auth.py  chat.py  contracts.py  invitations.py  no_lesson_months.py  pages.py  reports.py  users.py
new_backend/app/core/: config.py  database.py  security.py
new_backend/app/dependencies/: auth.py
new_backend/app/forms/: definitions.py
new_backend/app/models/: __init__.py  shared.py  work.py
new_backend/app/schemas/: assignments.py  auth.py  chat.py  contracts.py  invitations.py  no_lesson_months.py  reports.py  school_settings.py  (+1 more)
new_backend/migrations/: env.py
new_backend/tests/: conftest.py  test_admin_fixes.py  test_attendance.py  test_auth_users.py  test_contract_period_date_warning.py  test_contracts.py  test_disabled_user_no_email.py  test_full_scenario.py  test_investigation_2026072120937_draft_delete.py  test_mail_queue.py  test_minute_input_flow.py  test_must_change_password.py  test_over_limit_flow.py  test_past_month_editing.py  test_phase2_pages_and_bulk.py  test_report_requests_fields.py  test_reports_api.py  test_reports_api_step2b.py  test_return_request.py  test_school_deadline.py  test_school_progress.py  test_smtp_config.py  test_step3.py  test_step4.py  test_tutor_fixes.py  test_user_copy.py  test_user_csv.py  test_user_delete_email_release.py  test_workflow_engine.py  test_workflow_service.py
(+272 files in other folders)
