[project]
name = "tutor-report-system-new"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt==4.0.1",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "starlette==0.40.0",
  "aiosmtplib>=3.0",
  "email-validator>=2.1",
  "httpx>=0.27",
  "reportlab>=4.2",
  "apscheduler>=3.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
